--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "AI2D_UNet",
+    "name": "AI2D_UNet_wn",
     "cuda": true,
     "gpu": 0,
     "data_loader": {
@@ -12,12 +12,12 @@
         "size_jitter": 0.2
     },
     "validation": {
-        "validation_split": 0.1,
+        "validation_split": 0.01,
         "shuffle": true
     },
 
     "lr_scheduler_type": "ExponentialLR",
-    "lr_scheduler_freq": 1,
+    "lr_scheduler_step": 100000,
     "lr_scheduler": {
             "gamma": 0.8685113737513527
     },
@@ -30,17 +30,19 @@
     "loss": "sigmoid_BCE_loss",
     "metrics": ["meanIOU"],
     "trainer": {
-        "epochs": 1000,
+        "iterations": 1000000,
         "save_dir": "saved/",
-        "save_freq": 1,
-        "log_step": 100,
+        "val_step": 10000,
+        "save_step": 30000,
+        "log_step": 1000,
         "verbosity": 2,
         "monitor": "val_meanIOU",
-        "monitor_mode": "max"
+        "monitor_mode": "none"
     },
     "arch": "UNet", 
     "model": {
         "skip_last_sigmoid": true,
-        "n_channels": 4
+        "n_channels": 4,
+        "norm_type": "weightNorm"
     }
 }
